# learning-opengl

./: .gitignore  CMakeLists.txt  Makefile  README.md  git.sh  glad.c  main  main.cpp  run.sh
.cache/clangd/index/: ImageConverter.cpp.DCBBC9D297594EFC.idx  ImageConverter.cpp.F189212AD2DC92E2.idx  glad.c.84BC1AD755AB4ABF.idx  glad.c.8B677630F8A87CCE.idx  main.cpp.1BC034A5E381436F.idx  main.cpp.56BB96A0D51CE33B.idx  shader.cpp.522161C509A68E89.idx  shader.cpp.9B3FC02455107171.idx  shader.h.1D2BFE6CDCC1ED0E.idx  shader.h.90001EA94FDF02E4.idx
include/glad/: glad.h
shaders/: fragmentShader.txt  vertexShader.txt
src/: shader.cpp  shader.h
